<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/level_of_difficult"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/easy"
        android:layout_width="236dp"
        android:layout_height="99dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="102dp"
        android:background="@color/colorEasy"
        android:text="@string/easy" />

    <Button
        android:id="@+id/normal"
        android:layout_width="236dp"
        android:layout_height="99dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="238dp"
        android:background="@color/colorNormal"
        android:text="@string/normal" />

    <Button
        android:id="@+id/hard"
        android:layout_width="236dp"
        android:layout_height="99dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="368dp"
        android:background="@color/colorHard"
        android:text="@string/hard" />

</RelativeLayout>