<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="5dp">


    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/thx"
        android:textSize="40sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/Continue"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/continue_text"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <Button
        android:id="@+id/exit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/Continue"
        android:background="@color/colorPrimaryDark"
        android:text="@string/exit"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />
</RelativeLayout>